noinst_LIBRARIES = libminidraw.a
libminidraw_a_SOURCES = Text.cpp FontCache.cpp AppBuilder/WASDMovement.cpp Keyboard.cpp AnimatedImage.cpp Image.cpp ProgramState.cpp Sprite.cpp TextureCache.cpp
libminidraw_a_CPPFLAGS = -I/usr/local/include/SDL2 -I/usr/include/SDL2 -D_REENTRANT

AUTOMAKE_OPTIONS = subdir-objects
SUBDIRS = test

